syntax = "proto3";

package mnm;


service RemoteTasksService {
  rpc FetchRemoteTasks(RemoteEmpty) returns (RemoteTasksResponse);
  rpc FetchRemoteTaskById(FetchTaskByIdRequest) returns (RemoteTask);
  rpc FetchFromOwnServer(RemoteEmpty) returns (stream RemoteOwnTaskResponse); 
}


message RemoteEmpty {}

message RemoteOwnTaskResponse {
  int32 id = 1;
  string title = 2;
  bool completed = 3;
}


message RemoteTask {
  int32 userId = 1;
  int32 id = 2;
  string title = 3;
  bool completed = 4;
}

message RemoteTasksResponse {
  repeated RemoteTask tasks = 1;
}

message FetchTaskByIdRequest {
  int32 id = 1;
}